// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.filter override custom filter correctly 1`] = `
<div
  className="ant-dropdown-custom-view"
  id="customFilter"
>
  <span
    id="setSelectedKeys"
    onClick={[Function]}
  >
    setSelectedKeys
  </span>
  <span
    id="confirm"
    onClick={[Function]}
  >
    Confirm
  </span>
  <span
    id="reset"
    onClick={[Function]}
  >
    Reset
  </span>
</div>
`;

exports[`Table.filter renders custom content correctly 1`] = `
<div>
  <div
    class="ant-dropdown  ant-dropdown-placement-bottomLeft  ant-dropdown-hidden"
  >
    <div>
      <div
        class="custom-filter-dropdown"
      >
        custom filter
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders custom filter icon correctly 1`] = `
<span
  class="ant-table-filter-icon ant-dropdown-trigger"
  style=""
  title="Filter menu"
>
  filtered
</span>
`;

exports[`Table.filter renders custom filter icon correctly 2`] = `
<span
  class="ant-table-filter-icon ant-dropdown-trigger"
  style=""
  title="Filter menu"
>
  unfiltered
</span>
`;

exports[`Table.filter renders filter correctly 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table ant-table-default ant-table-scroll-position-left"
      >
        <div
          class="ant-table-content"
        >
          <div
            class="ant-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-column-has-filters"
                  >
                    <span>
                      Name
                      <i
                        class="anticon anticon-filter ant-dropdown-trigger"
                        title="Filter menu"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="filter"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 1024 1024"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M890.1 176.6c-12.8-31-42.8-51-76.4-51H212c-33.5 0-63.5 20-76.4 51-12.9 31-5.9 66.3 17.8 90.1l273 263.3v262c0 9.3 3.6 18.3 10.1 25l125.2 129.5c6.9 7.2 16.3 11 25.9 11 4.5 0 9.1-.9 13.5-2.6 13.6-5.5 22.5-18.7 22.5-33.4V528.3l248.5-261.5c23.8-23.8 30.8-59.1 18-90.2zm-68.9 39.2l-259 272.1c-6.8 6.8-10.5 15.9-10.5 25.5v322l-53.2-58V515c0-9.5-3.8-18.7-10.5-25.4L204.4 215.8c-4.2-4.2-3.5-8.6-2.3-11.6 1.2-3 4-6.6 9.9-6.6h601.7c5.9 0 8.6 3.6 9.9 6.6 1.2 3 1.8 7.5-2.4 11.6z"
                          />
                        </svg>
                      </i>
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  class="ant-table-row  ant-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ant-table-column-has-filters"
                  >
                    <span
                      class="ant-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Jack
                  </td>
                </tr>
                <tr
                  class="ant-table-row  ant-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ant-table-column-has-filters"
                  >
                    <span
                      class="ant-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ant-table-row  ant-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ant-table-column-has-filters"
                  >
                    <span
                      class="ant-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Tom
                  </td>
                </tr>
                <tr
                  class="ant-table-row  ant-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ant-table-column-has-filters"
                  >
                    <span
                      class="ant-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders menu correctly 1`] = `
<div>
  <div
    class="ant-dropdown  ant-dropdown-placement-bottomLeft  ant-dropdown-hidden"
  >
    <div
      class="ant-table-filter-dropdown"
    >
      <ul
        class="ant-dropdown-menu  ant-dropdown-menu-root ant-dropdown-menu-vertical"
        role="menu"
        tabindex="0"
      >
        <li
          class="ant-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="ant-checkbox-wrapper"
          >
            <span
              class="ant-checkbox"
            >
              <input
                class="ant-checkbox-input"
                type="checkbox"
              />
              <span
                class="ant-checkbox-inner"
              />
            </span>
          </label>
          <span>
            Boy
          </span>
        </li>
        <li
          class="ant-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="ant-checkbox-wrapper"
          >
            <span
              class="ant-checkbox"
            >
              <input
                class="ant-checkbox-input"
                type="checkbox"
              />
              <span
                class="ant-checkbox-inner"
              />
            </span>
          </label>
          <span>
            Girl
          </span>
        </li>
        <li
          class="ant-dropdown-menu-submenu ant-dropdown-menu-submenu-vertical"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-dropdown-menu-submenu-title"
            title="Title"
          >
            Title
            <i
              class="ant-dropdown-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div
        class="ant-table-filter-dropdown-btns"
      >
        <a
          class="ant-table-filter-dropdown-link confirm"
        >
          OK
        </a>
        <a
          class="ant-table-filter-dropdown-link clear"
        >
          Reset
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders radio filter correctly 1`] = `
<div>
  <div
    class="ant-dropdown  ant-dropdown-placement-bottomLeft  ant-dropdown-hidden"
  >
    <div
      class="ant-table-filter-dropdown"
    >
      <ul
        class="ant-dropdown-menu  ant-dropdown-menu-root ant-dropdown-menu-vertical"
        role="menu"
        tabindex="0"
      >
        <li
          class="ant-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="ant-radio-wrapper"
          >
            <span
              class="ant-radio"
            >
              <input
                class="ant-radio-input"
                type="radio"
              />
              <span
                class="ant-radio-inner"
              />
            </span>
          </label>
          <span>
            Boy
          </span>
        </li>
        <li
          class="ant-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="ant-radio-wrapper"
          >
            <span
              class="ant-radio"
            >
              <input
                class="ant-radio-input"
                type="radio"
              />
              <span
                class="ant-radio-inner"
              />
            </span>
          </label>
          <span>
            Girl
          </span>
        </li>
        <li
          class="ant-dropdown-menu-submenu ant-dropdown-menu-submenu-vertical"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-dropdown-menu-submenu-title"
            title="Title"
          >
            Title
            <i
              class="ant-dropdown-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div
        class="ant-table-filter-dropdown-btns"
      >
        <a
          class="ant-table-filter-dropdown-link confirm"
        >
          OK
        </a>
        <a
          class="ant-table-filter-dropdown-link clear"
        >
          Reset
        </a>
      </div>
    </div>
  </div>
</div>
`;
